fix(ci): use file-based approach for ECS task definition update

--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -158,14 +158,14 @@ jobs:
             --output json)
           
           # Update the image in the task definition
-          NEW_TASK_DEF=$(echo "$TASK_DEFINITION" | \
+          echo "$TASK_DEFINITION" | \
             jq --arg IMAGE "${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/music-box-realtime:${{ github.sha }}" \
-            '.containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
+            '.containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' \
+            > new-task-def.json
           
           # Register the new task definition
-          NEW_TASK_ARN=$(echo "$NEW_TASK_DEF" | \
-            aws ecs register-task-definition \
-            --cli-input-json file:///dev/stdin \
+          NEW_TASK_ARN=$(aws ecs register-task-definition \
+            --cli-input-json file://new-task-def.json \
             --query 'taskDefinition.taskDefinitionArn' \
             --output text)
           
